# remote-hiring-radar

./: .env.example  .gitignore  404.html  EVAL_RESULTS.md  README.md  codex-project-summary.md  gold_testset_plan.md  index.html  index.txt  manifest.json  pyproject.toml
.github/workflows/: ci.yml  eval-seed-validation.yml  pages.yml
_next/static/OGs2L65fMxZ1H3Ba4TQZ9/: _buildManifest.js
_next/static/chunks/: 255-bd4463d47918cb22.js  774-b18ece094fb626a7.js  main-83cf4c17a736e879.js  webpack-f2e2394f3a580116.js
_next/static/chunks/app/: page-329967750caa2881.js
_next/static/css/: 154a38af60bd2a22.css
docs/: architecture.md
evals/: README.md
evals/gold/: README.md  annotation_template.csv  seed_gold.jsonl
evals/results/: latest_seed_validation.json
evals/rubrics/: rubric.yaml
evals/scripts/: README.md  validate_seed.py
frontend/: .env.example  eslint.config.mjs  next.config.mjs  package-lock.json  package.json
frontend/src/app/: dashboard.tsx  globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.test.ts  api.ts  demo.test.ts  demo.ts  filters.test.ts  filters.ts  search.test.ts  search.ts
scripts/: secret_scan.py
src/remote_hiring_radar/: __init__.py  api.py  cli.py  config.py  links.py  models.py  pipeline.py  quality.py  repository.py  service.py
tests/: test_api.py  test_links.py  test_pipeline.py  test_quality.py  test_repository.py  test_service.py
